--- a/webclient/package.json
+++ b/webclient/package.json
@@ -12,9 +12,11 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "graphql": "16.7.1",
+    "graphql-ws": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
